--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -5,6 +5,7 @@ python:
     - 3.7
     - 3.8
     - 3.9
+    - 3.10
 numpy:
     - 1.11
     - 1.11
@@ -12,6 +13,7 @@ numpy:
     - 1.11
     - 1.11
     - 1.16
+    - 1.21
 c_compiler:
     - vs2008 # [win]
     - vs2015 # [win]
@@ -19,8 +21,10 @@ c_compiler:
     - vs2015 # [win]
     - vs2015 # [win]
     - vs2015 # [win]
+    - vs2015 # [win]
 cxx_compiler:
     - vs2008 # [win]
+    - vs2015 # [win]
     - vs2015 # [win]
     - vs2015 # [win]
     - vs2015 # [win]
