add cachannel package

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,6 +27,7 @@ install:
   - conda build -c %MY_CONDA_CHANNEL% --token %CONDA_TOKEN% --skip-existing epics-base || call rem
   - conda build -c %MY_CONDA_CHANNEL% --token %CONDA_TOKEN% --skip-existing bitshuffle || call rem
   - conda build -c %MY_CONDA_CHANNEL% --token %CONDA_TOKEN% --skip-existing lzf || call rem
+  - conda build -c %MY_CONDA_CHANNEL% --token %CONDA_TOKEN% --skip-existing cachannel || call rem
 
 on_success:
   - echo "Finished building"
