backport darwin-aarch64 support to epics base 3.14.12

--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -13,6 +13,7 @@ source:
         - rules_build.diff # [not win]
         - config_readline.diff # [linux]
         - cas.diff
+        - darwin-aarch64.diff
 
 build:
   number: 3
