bacport linux-aarch64 to epics base 3.14.12

--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -14,6 +14,7 @@ source:
         - config_readline.diff # [linux]
         - cas.diff
         - darwin-aarch64.diff
+        - linux-aarch64.diff
 
 build:
   number: 4
